Fix spacing in announcement div and developerToolbox div

--- a/src/pages/styles/main.css
+++ b/src/pages/styles/main.css
@@ -51,6 +51,10 @@
     text-align: center;
 }
 
+.announcement>div {
+    padding: 5% 0 3% 0 !important;
+}
+
 .announcement>div>div>div>h3,
 .viewAddOn h3 {
     font-size: 35px !important;
@@ -60,9 +64,14 @@
     padding: 0 !important;
 }
 
+.developerTool {
+   padding: 0% 0 8% 0 !important;
+}
+
 .creatorToolBox>div>p:first-child,
 .developerTool>div>p:first-child {
     height: 100px !important;
+    padding: 0 0 8% 0 !important;
 }
 
 .wrapperforCreatorTool>div {
@@ -127,10 +136,16 @@
     text-align: center !important;
 }
 
-.viewAddOn>div>div>div>div:nth-child(4) {
+.viewAddOn>div>div>div>div:nth-child(3) {
     display: flex !important;
     justify-content: center !important;
 }
+
+.viewAddOn p.teaserBlockCustomHeading{
+    color: white !important;
+    font-size: 22pt;
+    font-weight: bold;
+ }
 
 .viewAddOn p {
     color: #E2CAF1 !important;
